src/index.css
body {
  margin: 0;
  font-family: Arial,Helvetica Neue,Helvetica,sans-serif; 
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black !important;
  color: white !important;
  overflow-x: hidden;
}
code {
  font-family: Avant Garde,Avantgarde,Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
}
.list-text{
  font-family: Verdana,Geneva,sans-serif; 
  font-size: 20px;
}
/* 
***************************************************************
App.js 
***************************************************************
*/

/* 
***************************************************************
Navbar.js 
***************************************************************
*/
.outer{
  height: 100vh;
}
.logo-navbar{
  width: 50%;
  height: 50%;
  position: absolute;
  top: 50%;
}
.fas{
  list-style-type: none;
  font-size: 25px;
  padding-right: 15px;
}
.list-item{
  padding: 25px 20px !important;
}
.list-text{
  padding-left: 18px;
}
.nav-link-item {
  color: inherit;
  text-decoration: none;
}
.nav-link-item:hover,
.nav-link-item:active{
  color: red;
  text-decoration: none;
}
.nav-link-item.active {
  color: green;
}
.userProfileImg{
  margin-left: -5px;
}
.userName{
  padding-top: 10px;
  padding-left: 20px;
}
.toggle-arrow{
  font-size: 55px;
  animation: arrowBlink 2.5s infinite linear;
}
.logo-navbar{
  padding-left: 60px;
  position: fixed;
  height: auto;
  width: auto;
}
@keyframes arrowBlink {
  0% {
    color: rgb(97, 96, 96);
  }
  50% {
    color: white;
  }
  100%{
    color: rgb(97, 96, 96);
  }
}

/* 
***************************************************************
Dashboard.js 
***************************************************************
*/
#my-dashboard{
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
#video-container{
  position: fixed;
  top: 0%;
  left: 0%;
  width: 100%;
  height: 100%;
}
video{
  height: 110%;
  width: 100%;
  position: absolute;
  pointer-events: none;
  object-fit: cover;
}
.dashboard-page{
  padding-right: 10px;
  z-index: 1;
}
.dashboard-items{
  display: block;
  margin-left: auto;
  margin-right: auto;
  transform: translate(-5%,30%);
}
.dashboard-logo-name{
  list-style: none;
}
.dashboard-logo{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 30%;
  transform: translateX(-60%);
}
.dashboard-name{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  transform: translateX(-40%);
}
.search-box{
  transform: translateX(18%);
}
.anime-list{
  margin-top: 10%;
  transform: translateY(5%);
}
.anime-input{
  width: 35em !important;
}
.anime-card{
  padding: 20px;
}
.modal-backdrop
{
    z-index: -999;
}
.anime-modal-content {
  position: relative;
  padding: 20px;
  height: 800px;
  overflow-y: scroll;
}
.wrapper{
  position: relative;
}
#animeModal{
  position: absolute;
}
.anime-image{
  height: 275px;
  width: 200px; 
}
.anime-image:hover{
  /* make it so hovering over pops up a small sypnosis box */
  transition-delay: 0.05s;
}
.blue-anime-button:hover{
  box-shadow: 1px 2px 20px #4a69bd;
  transition-delay: 0.05s;
}
.anime-card {
	padding: 5px;
}
#animes .col-md-3 .well{
	height: 420px;
}
#animes a{
	margin-top: 10px;
}
#animes h6{
	margin-top: 10px;
}
#anime-song{
  padding: 5px 0 0 5px;
  height: 30px;
  width: 210px;
}
.selected-anime{
  padding-top: 5%;
}
.anime-info{
  list-style-type: none;
  padding-left: 45px !important;
}
.anime-info li{
  padding-top: 10px;
}
.anime-synopsis{
  padding: 30px 0 0 15px;
}
.nav-anime-btn{
  margin: 5px;
}
/* 
***************************************************************
Search.js 
***************************************************************
*/
.fa-search{
  font-size: 25px;
  padding-left: 8px;
}
/* 
***************************************************************
Authentication
***************************************************************
*/
.auth-btn{
  background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
  outline: inherit;
}
.modal{
  margin-top: 5em;
  color: black;
}
.modal-open { 
  overflow-y: auto; 
}
input[type=text]:not(.browser-default):focus:not([readonly]),
input[type=email]:not(.browser-default):focus:not([readonly]),
input[type=password]:not(.browser-default):focus:not([readonly]){
  border-color: #eb3b5a;
  box-shadow: none;
}
.sign-in-up-btn{
  font-size: 25px;
}
#modal-sign-in{
  display: flex;
  flex-wrap: wrap;
}
.google-auth-btn{
  border: black solid 1px;
}
.facebook-auth-btn{
  margin-top: 8px;
  border: black solid 1px;
}
.google-auth-btn:hover{
  
  background-color: rgb(252, 222, 208);
  border-color: rgb(255, 122, 60);
}
.facebook-auth-btn:hover{
  background-color: rgb(191, 216, 255);
  border-color: rgb(53, 130, 255);
}
.fa-google{
  color: #dd4b39;
  margin-right: 5px;
  font-size: 1.2em;
}
.fa-facebook-square{
  color: #3b5998;
  margin-right: 5px;
  font-size: 1.4em;
}
.sign-in-up-btn:hover{
  font-size: 27px;
  color: rgb(250, 141, 141);
}
.auth-selected-btn{
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: black 3px solid;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding: 5px 15px;
  animation: auth-btns 2.5s infinite;
}
@keyframes auth-btns{
  0%{border-color: black;}
  50%{border-color: rgb(165, 163, 163);}
  100%{border-color: black;}
}

/* 
***************************************************************
Media Queries
***************************************************************
*/
@media screen and (max-width: 1400px) /* Desktop */ {
  .anime-input{
    width: 30em !important;
  }
  .dashboard-page{
    padding-left: 60px;
  }
  .selected-anime{
    padding-left: 70px;
  }
}
@media screen  and (max-width: 990px) /* Tablet */ {
  .anime-input{
    width: 20em !important;
  }
  .dashboard-page{
    padding-left: 70px;
  }
  .dashboard-logo{
    width: 40%;
    transform: translateX(-55%);
  }
  .dashboard-name{
    width: 60%;
    transform: translateX(-35%);
  }
  .selected-anime{
    padding-left: 70px;
    transform: translateY(2%);
  }
}
@media screen  and (max-width: 770px) {
  .anime-input{
    width: 17.3em !important;
  }
  .search-box{
    transform: translateX(10%);
  }
  .dashboard-logo{
    width: 60%;
    transform: translateX(-35%);
  }
  .dashboard-name{
    width: 80%;
    transform: translateX(-20%);
  }
}
@media screen and (max-width: 575px) /* Mobile */ {
  .anime-input{
    width: 5em !important;
  }
  .dashboard-logo{
    width: 70%;
    transform: translateX(-25%);
  }
  .dashboard-name{
    width: 100%;
    transform: translateX(-15%);
  }
  .search-box{
    transform: translateX(5%);
  }
  .anime-list{
    padding-left: 10px;
    transform: translate(-6%,2%);
  }
  .toggle-arrow{
    position: absolute;
    right: 15%;
  }
  #searchText{
    width: 13em !important;
  }
  .modal{
    margin-top: 2em;
  }
  #modal-auth-sign-in{
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
  }
  #login-submit{
    margin-left: 8px;
    margin-bottom: 10px;
  }
}

@media screen and (max-width: 468px) /* smaller mobile */ {
  #search-btn{
    position: absolute;
    left: 220px;
    bottom: 1px;
  }
  .anime-list{
    transform: translate(3%,2%);
  }
}

